# agui-Adk-mcp

./: .gitignore  AGENT_REGISTRATION_FIX.md  ALL_ERRORS_FIXED.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  COMPLETE_FIX.md  FINAL_FIX.md  FINAL_JSON_FIX.md  GEOCODING_FEATURE.md  HUMAN_IN_LOOP.md  IMPLEMENTATION_SUMMARY.md  JSON_PARSE_FIX.md  MCP_HITL_GUIDE.md  QUICK_START.md  README.md  README_FIXED.md  SOLUTION.md  START.md  STATUS.md  SUCCESS_COMPLETE.md  SYSTEM_TEST.md  TESTING.md  UI_IMPROVEMENTS.md  UPGRADE_COMPLETE.md  UPGRADE_FIXED.md  UPGRADE_SUCCESS.md  UPGRADE_TO_V1.50.md  backend_tool_rendering.py  final_test.py  package-lock.json  package.json  quick_check.py  restart_servers.sh  setup.sh  start.sh  start_backend.sh  test_all_events.py  test_complete_flow.py  test_error.py  test_hitl.py  (+1 more)
app/: layout.tsx  page.tsx  style.css
app/api/copilotkit/: route.ts
app/api/copilotkit/[integrationId]/: route.ts
app/api/copilotkit/[integrationId]/info/: route.ts
app/api/copilotkit/info/: route.ts
app/api/weather/alerts/: route.ts
app/api/weather/forecast/: route.ts
weather/: agent.py  pyproject.toml  weather.py
